--- a/style.css
+++ b/style.css
@@ -282,12 +282,16 @@ nav box-icon {
 /* || Review Section */
 .review-section {
     text-align: center;
-    padding: 10rem 13vw;
-    background-image: url('./images/review-bg.webp');
+    padding-top: 18rem;;
+    padding-bottom: calc(18rem + 15rem);
+    padding-left: 13vw;
+    padding-right: 13vw;
+    background-image: url('./icons/Vector\ 26.svg'), url('./icons/“.svg');
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-position: center;
+    background-size: cover, 40% 40%;
+    background-position: center, right 5rem top 20rem;
     position: relative;
+    background-blend-mode: multiply;
 }
 
 .reviews {
@@ -316,11 +320,15 @@ nav box-icon {
 /* || Footer Section */
 
 footer {
+    margin-top: -42rem;
     background-color: #0D4A31;
 }
 
 .two-column {
-    padding: 15rem 13vw;
+    padding-top: calc(15rem + 40rem);
+    padding-bottom: 15rem;
+    padding-left: 13vw;
+    padding-right: 13vw;
     display: flex;
     justify-content: space-between;
 }
@@ -377,9 +385,11 @@ footer {
 
 .contact-form form {
     display: flex;
+    height: 100%;
+    justify-content: center;
     flex-direction: column;
     padding: 4rem;
-    gap: 4rem;
+    gap: 3rem;
     background-color: #FFFFFF;
     border-radius: 5px;
 }
@@ -397,6 +407,7 @@ input {
 textarea{
     font-size: 1.5rem;
     padding-left: 1rem;
+    flex-grow: 1;
 }
 
 ::placeholder{
